@@ -1,5 +1,6 @@
 package com.pcs.restaurantapi.service.impl;
 
+import com.pcs.restaurantapi.dto.CartDto;
 import com.pcs.restaurantapi.dto.CartItemDto;
 import com.pcs.restaurantapi.exception.*;
 import com.pcs.restaurantapi.mapper.CartMapper;
@@ -15,8 +16,8 @@ import com.pcs.restaurantapi.service.CartService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.nio.file.AccessDeniedException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,76 +27,75 @@ public class CartServiceImpl implements CartService {
     private final CartRepository cartRepository;
     private final CartItemRepository cartItemRepository;
     private final MenuItemRepository menuItemRepository;
+    private final CartMapper cartMapper;
 
     @Override
-    public Cart createCart(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-
+    public CartDto createCart(String username) {
+        User user = findUserByUsername(username);
         if (cartRepository.existsByCustomer(user)){
             throw new CartAlreadyExistsException("Cart already exists");
         }
         Cart cart = new Cart();
         cart.setCustomer(user);
-        return cartRepository.save(cart);
+        Cart savedCart = cartRepository.save(cart);
+        return cartMapper.toCartDto(savedCart);
     }
 
     @Override
-    public List<CartItemDto> getAllCartItems(Long userId, Long cartId) throws AccessDeniedException {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new CartNotFoundException("Cart not found"));
-        if (!cart.getCustomer().getId().equals(user.getId())){
-            throw new AccessDeniedException("You do not own this cart");
-        }
+    public List<CartItemDto> getAllCartItems(String username) {
+        User user = findUserByUsername(username);
+        Cart cart = findCartByUsername(username);
         return cartItemRepository.findAllByCart(cart).stream()
-                .map(CartMapper::toCartItemDto)
-                .toList();
+                .map(cartMapper::toCartItemDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public CartItemDto addCartItem(Long userId, Long cartId, CartItemDto cartItemDto) throws AccessDeniedException {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new CartNotFoundException("Cart not found"));
-        if (!cart.getCustomer().getId().equals(user.getId())){
-            throw new AccessDeniedException("You do not own this cart");
-        }
-        MenuItem menuItem = menuItemRepository.findById(cartItemDto.getMenuItemId())
-                .orElseThrow(() -> new MenuItemNotFoundException("MenuItem not found"));
+    public CartItemDto addCartItem(String username, CartItemDto cartItemDto) {
+        User user = findUserByUsername(username);
+        Cart cart = findCartByUsername(username);
+        MenuItem menuItem = findMenuItemById(cartItemDto.getMenuItemId());
         CartItem cartItem = new CartItem();
         cartItem.setCart(cart);
         cartItem.setMenuItem(menuItem);
         cartItem.setQuantity(cartItemDto.getQuantity());
         CartItem savedCartItem = cartItemRepository.save(cartItem);
-        return CartMapper.toCartItemDto(savedCartItem);
+        return cartMapper.toCartItemDto(savedCartItem);
     }
 
     @Override
-    public void removeCartItem(Long userId, Long cartId, Long cartItemId) throws AccessDeniedException {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new CartNotFoundException("Cart not found"));
-        if (!cart.getCustomer().getId().equals(user.getId())){
-            throw new AccessDeniedException("You do not own this cart");
-        }
-        CartItem cartItem = cartItemRepository.findById(cartItemId)
-                .orElseThrow(() -> new CartItemNotFoundException("CartItem not found"));
-        if (!cartItem.getCart().getId().equals(cartId)) {
-            throw new AccessDeniedException("This cart item does not belong to your cart.");
+    public void removeCartItem(String username, Long cartItemId){
+        User user = findUserByUsername(username);
+        Cart cart = findCartByUsername(username);
+        CartItem cartItem = findCartItemById(cartItemId);
+        if (!cartItem.getCart().getId().equals(cart.getId())) {
+            throw new CartItemAccessDeniedException("This cart item does not belong to your cart.");
         }
         cartItemRepository.deleteById(cartItemId);
     }
 
+
     @Override
-    public void removeCart(Long userId, Long cartId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("User not found"));
-        Cart cart = cartRepository.findById(cartId)
-                .orElseThrow(() -> new CartNotFoundException("Cart not found"));
+    public void removeCart(String username) {
+        Cart cart = findCartByUsername(username);
         cartRepository.delete(cart);
+    }
+
+    // ----------------- Private Helper Methods -----------------
+
+    private User findUserByUsername(String username) {
+        return userRepository.findByUsername(username).orElseThrow(() -> new UserNotFoundException("User with username " + username + " not found"));
+    }
+
+    private Cart findCartByUsername(String username){
+        return cartRepository.findByCustomerUsername(username).orElseThrow(() -> new CartNotFoundException("Cart not found"));
+    }
+
+    private MenuItem findMenuItemById(Long menuId){
+        return menuItemRepository.findById(menuId).orElseThrow(() -> new MenuItemNotFoundException("MenuItem not found"));
+    }
+
+    private CartItem findCartItemById(Long cartItemId){
+        return cartItemRepository.findById(cartItemId).orElseThrow(() -> new CartItemNotFoundException("CartItem not found"));
     }
 }
